Adds enhanced meta tags

--- a/src/layouts/404.hbs
+++ b/src/layouts/404.hbs
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{detag (or page.title 'Page Not Found')}}{{#if site.title}} :: {{site.title}}{{/if}}</title>
-    <link rel="stylesheet" href="{{uiRootPath}}/css/site.css">
-{{> head}}
+    <link rel="stylesheet" href="{{uiRootPath}}/css/site.css?v-01">
+	<link rel="shortcut icon" href="{{uiRootPath}}/img/favicons/favicon.ico" />
+{{> head-scripts}}
   </head>
   <body class="status-404">
 {{> header}}
