--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -19,16 +19,16 @@
               <div class="navbar-dropdown-col mm-col-two">
                 <a class="navbar-item" href="https://doc.akka.io/docs/akka-enhancements/current/akka-resilience-enhancements.html">Akka Resilience Enhancements</a>
                 <a class="navbar-item" href="https://doc.akka.io/docs/akka-enhancements/current/akka-persistence-enhancements.html">Akka Persistence Enhancements</a>
+                <a class="navbar-item" href="https://developer.lightbend.com/docs/cloudflow/current/">Cloudflow Enterprise Features</a>
                 <a class="navbar-item" href="https://developer.lightbend.com/docs/fortify/current/">Fortify SCA for Scala</a>
                 <a class="navbar-item" href="https://developer.lightbend.com/docs/console/current/">Lightbend Console</a>
-                <a class="navbar-item" href="https://developer.lightbend.com/docs/cloudflow/current/">Lightbend Cloudflow Enterprise</a>
                 <a class="navbar-item" href="https://developer.lightbend.com/docs/lightbend-platform/introduction/">Lightbend Platform Guide</a>           
                 <a class="navbar-item" href="https://developer.lightbend.com/docs/telemetry/current/home.html">Lightbend Telemetry</a>
               </div>
               <div class="navbar-dropdown-col mm-col-two invisible-border">
                 <a class="navbar-item" href="https://akka.io/docs/">Akka</a>
                 <a class="navbar-item" href="https://doc.akka.io/docs/alpakka/current/">Alpakka</a>
-                <a class="navbar-item" href="https://cloudflow.io/docs/current/">Cloudflow Open Source</a> 
+                <a class="navbar-item" href="https://cloudflow.io/docs/current/">Cloudflow</a> 
                 <a class="navbar-item" href="https://www.lagomframework.com/documentation/">Lagom Framework</a>
                 <a class="navbar-item" href="https://www.playframework.com/documentation">Play Framework</a>
                 <a class="navbar-item" href="https://www.scala-sbt.org/documentation.html">sbt</a>
