--- a/src/layouts/docs-only.hbs
+++ b/src/layouts/docs-only.hbs
@@ -3,11 +3,11 @@
   <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{uiRootPath}}/css/site.css?v-01">
+  <link rel="stylesheet" href="{{uiRootPath}}/css/docs-only.css?v-01">
   </head>
-  <body class="article">
+  <body class="article docs-only">
 
-{{> no-toc}}
-
+{{> docs-only}}
+{{> footer-scripts}}
   </body>
 </html>
