--- a/src/partials/docs-only.hbs
+++ b/src/partials/docs-only.hbs
@@ -1,10 +1,10 @@
 <div class="main-wrapper">
 
   <main class="main">
-
+  
     <div class="col-content">
-{{> no-toc-article}}
-
+{{> article}}
+{{> toc}}
     </div>
   </main>
 </div>
