--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -1,8 +1,7 @@
 <footer class="footer">
 	<nav>
 		<section>
-			<h3>Documentation</h3>
-			<h4><a href="https://developer.lightbend.com/docs/lightbend-platform/introduction/">Lightbend Platform</a></h4>
+			<h3>Lightbend Documentation</h3>
 			<ul>
 					<li><a class="navbar-item" href="https://akka.io/docs/">Akka</a></li>
 					<li><a class="navbar-item" href="https://doc.akka.io/docs/alpakka/current/">Alpakka</a></li>
@@ -13,7 +12,6 @@
 					<li><a href="https://developer.lightbend.com/docs/fortify/current/">Fortify SCA for Scala</a></li>
 					<li><a class="navbar-item" href="https://www.lagomframework.com/documentation/">Lagom Framework</a></li>
 					<li><a href="https://developer.lightbend.com/docs/console/current/">Lightbend Console</a></li>
-					<li><a href="https://developer.lightbend.com/docs/lightbend-platform/introduction/">Lightbend Platform Guide</a></li>
 					<li><a class="navbar-item" href="https://www.playframework.com/documentation">Play Framework</a></li>
 					<li><a class="navbar-item" href="https://www.scala-sbt.org/documentation.html">sbt</a></li>
 					<li><a class="navbar-item" href="https://docs.scala-lang.org/">Scala</a></li>
@@ -37,9 +35,9 @@
 			<ul>
 				<li><a href="https://www.lightbend.com/about-lightbend">Who Is Lightbend?</a></li>
 				<li><a href="https://www.lightbend.com/customers">Who Uses Lightbend?</a></li>
-				<li><a href="https://www.lightbend.com/lightbend-platform-subscription">Why Get A Subscription?</a></li>
+				<li><a href="https://www.lightbend.com/lightbend-subscription">Why Get A Subscription?</a></li>
 				<li><a href="https://www.lightbend.com/company/news">News & Press</a></li>
-				<li><a href="https://shop.lightbend.com/">Online Swag Shop</a></li>
+				<!--<li><a href="https://shop.lightbend.com/">Online Swag Shop</a></li>-->
 				<li><a href="https://www.lightbend.com/contact">Get In Contact</a></li>
 			</ul>
 		</section>
@@ -47,7 +45,7 @@
 
 	<div class="legal-social">
 		<div class="legal">
-			<p>© Lightbend 2019 | <a href="https://www.lightbend.com/legal/licenses">Licenses</a> | <a href="https://www.lightbend.com/legal/terms">Terms</a> | <a href="https://www.lightbend.com/legal/privacy">Privacy Policy</a> | <a href="https://www.lightbend.com/legal/cookie">Cookie Listing</a> | <a class="optanon-toggle-display">Cookie Settings</a>
+			<p>© Lightbend 2020 | <a href="https://www.lightbend.com/legal/licenses">Licenses</a> | <a href="https://www.lightbend.com/legal/terms">Terms</a> | <a href="https://www.lightbend.com/legal/privacy">Privacy Policy</a> | <a href="https://www.lightbend.com/legal/cookie">Cookie Listing</a> | <a class="optanon-toggle-display">Cookie Settings</a>
 			<span class="footer-logo">
 				<svg class="lightbend-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 372 80">
 					<title>lightbend-logo</title>
