--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,8 @@
 footer.footer {
 	background-color: var(--color-lb-slate);
 	color: #fff;
-	padding: 4rem 1rem;
+	padding: 1rem;
+	position: relative;
 }
 .footer nav ul + ul {
 	border-top: 1px solid var(--color-lb-slate-ltr);
@@ -9,30 +10,34 @@ footer.footer {
 }
 .footer nav h3 {
 	margin-top: 0;
-	margin-bottom: 1rem;
+	margin-bottom: 0.375rem;
 	color: var(--color-lb-orange);
-	font-size: 28px;
+	font-size: 16px;
+	text-transform: uppercase;
 	font-weight: 700;
-	border-bottom: 1px solid var(--color-lb-slate-ltr);
+	border-bottom: 0px solid rgba(255,255,255,.1);
 }
 .footer nav h3 a {
 	color: var(--color-lb-orange);
-	font-size: 0.875rem;
+	font-size: 16px;
 	text-transform: uppercase;
 	background: var(--color-lb-slate-dkr);
 	margin-bottom: 2px;
 	padding: 1rem;
 	display: block;
 }
+.footer nav h3 + h4 {
+	margin-top: 0;
+}
 .footer nav h4 {
 	margin-bottom: .25rem;
-	color: var(--color-lb-orange-dkr);
+	color: rgba(255,255,255,.9);
 	font-size: 16px;
 	font-weight: 700;
 	text-transform: uppercase;
 }
 .footer nav h4 a {
-	color: var(--color-lb-orange-dkr);
+	color: rgba(255,255,255,.9);
 }
 .footer nav h4 a:hover {
 	color: var(--color-lb-orange);
@@ -56,13 +61,14 @@ footer.footer {
 	display: block;
 	line-height: 1.5rem;
 	color: var(--color-lb-off-white);
-	background: var(--color-lb-slate-dkr);
+	background: rgba(0,0,0,.2);
 	margin-bottom: 2px;
 	padding: 1rem;
 }
 .footer nav ul li a:hover {
 	text-decoration: none;
 	color: var(--color-lb-orange);
+	background: rgba(0,0,0,.4);
 }
 .footer nav ul li a:hover .svg-icon path {
 	fill: var(--color-lb-orange);
@@ -140,9 +146,6 @@ footer.footer {
 	height: 24px;
 }
 
-
-
-
 @media screen and (min-width: 800px) {
 	.footer nav {
 		display: flex;
@@ -160,12 +163,21 @@ footer.footer {
 }
 
 @media screen and (min-width: 1024px) {
+	footer.footer {
+		padding: 5rem 1rem 4rem 1rem;
+	}
 	.footer nav, .legal-social {
 		display: flex;
 		flex-wrap: wrap;
 		max-width: 1370px;
-		padding-left: 17rem;
+		padding-left: 14rem;
 	}
+
+	body.simple .footer nav, 
+	body.simple .legal-social {
+		padding-left: 0;
+	}
+
 	.footer nav section {
 		padding-right: 2rem;
 		flex-basis: 33%;
@@ -181,6 +193,10 @@ footer.footer {
 		margin-bottom: 0;
 		padding: 0;
 		font-size: 15px;
+		display: inline-block;
+	}
+	.footer nav ul li a:hover {
+		background: rgba(0,0,0,0);
 	}
 	.footer nav ul li a.btn {
 		padding: .5rem;
@@ -201,4 +217,21 @@ footer.footer {
 	}
 }
 
+@media screen and (min-width: 1280px) {
+	body.simple .footer nav, 
+	body.simple .legal-social {
+		padding-left: 14rem;
+	}
+
+}
+
+@media screen and (min-width: 1500px) {
+	body.simple .footer nav, 
+	body.simple .legal-social {
+		padding-left: 18rem;
+	}
+	.footer nav, .legal-social {
+		padding-left: 18rem;
+	}
+}
 
