--- a/src/css/header.css
+++ b/src/css/header.css
@@ -289,7 +289,8 @@ body {
   }
 
   .navbar-dropdown .section-title {
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
+    font-size: .875rem
   }
 
   .mm-col-one {
@@ -341,11 +342,11 @@ body {
 }
 .site-id {
   position: absolute;
-  color: white;
-  left: 92px;
-  bottom: 12px;
+  color: rgba(255,255,255,.7);
+  left: 97px;
+  bottom: 19px;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 700;
   line-height: 1;
 }
