--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -1,6 +1,10 @@
 :root {
   --drawer-height: 2.5rem;
 }
+body.simple .navigation-container {
+  opacity: 0;
+  height: 0;
+}
 
 .navigation-container {
   display: none;
@@ -16,10 +20,50 @@
   display: block;
 }
 
+.navigation {
+  background-color: #fafafa;
+  position: relative;
+  top: var(--toolbar-height);
+  height: calc(100vh - var(--navbar-height) - var(--toolbar-height));
+}
+
+.navigation .panels {
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+}
+
 @media screen and (min-width: 769px) {
   .navigation-container {
     width: 14rem;
     font-size: 0.875rem;
+  }
+  .navigation {
+    box-shadow: 0.5px 0 3px #c1c1c1;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body.simple .navigation-container {
+    display: none;
+  }
+  .navigation-container {
+    font-size: 0.8125rem;
+    flex: none;
+    display: block;
+    position: static;
+    top: 0;
+  }
+  .navigation {
+    top: var(--navbar-height);
+    box-shadow: none;
+    position: sticky;
+    height: calc(100vh - var(--navbar-height));
+  }
+}
+@media screen and (min-width: 1280px) {
+  body.simple .navigation-container {
+    display: block;
   }
 }
 
@@ -29,40 +73,12 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .navigation-container {
-    font-size: 0.8125rem;
-    flex: none;
-    display: block;
-    position: static;
-    top: 0;
-  }
-}
 
-.navigation {
-  background-color: #fafafa;
-  position: relative;
-  top: var(--toolbar-height);
-  height: calc(100vh - var(--navbar-height) - var(--toolbar-height));
-}
 
-@media screen and (min-width: 769px) {
-  .navigation {
-    box-shadow: 0.5px 0 3px #c1c1c1;
-  }
-}
 
-@media screen and (min-width: 1024px) {
-  .navigation {
-    top: var(--navbar-height);
-    box-shadow: none;
-    position: sticky;
-    height: calc(100vh - var(--navbar-height));
-  }
-}
 
-.navigation .panels {
-  display: flex;
-  flex-direction: column;
-  height: inherit;
-}
+
+
+
+
+
