--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -14,15 +14,14 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">Documentation</span>
           <div class="navbar-dropdown">
-            <a class="navbar-item section-title" href="https://developer.lightbend.com/docs/lightbend-platform/introduction/">Lightbend Platform</a>
+            <span class="navbar-item section-title">Lightbend Documentation</span>
             <div class="columns">
               <div class="navbar-dropdown-col mm-col-two">
                 <a class="navbar-item" href="https://doc.akka.io/docs/akka-enhancements/current/akka-resilience-enhancements.html">Akka Resilience Enhancements</a>
                 <a class="navbar-item" href="https://doc.akka.io/docs/akka-enhancements/current/akka-persistence-enhancements.html">Akka Persistence Enhancements</a>
                 <a class="navbar-item" href="https://developer.lightbend.com/docs/cloudflow/current/">Cloudflow Enterprise Features</a>
                 <a class="navbar-item" href="https://developer.lightbend.com/docs/fortify/current/">Fortify SCA for Scala</a>
-                <a class="navbar-item" href="https://developer.lightbend.com/docs/console/current/">Lightbend Console</a>
-                <a class="navbar-item" href="https://developer.lightbend.com/docs/lightbend-platform/introduction/">Lightbend Platform Guide</a>           
+                <a class="navbar-item" href="https://developer.lightbend.com/docs/console/current/">Lightbend Console</a>          
                 <a class="navbar-item" href="https://developer.lightbend.com/docs/telemetry/current/home.html">Lightbend Telemetry</a>
               </div>
               <div class="navbar-dropdown-col mm-col-two invisible-border">
@@ -54,9 +53,9 @@
           <div class="navbar-dropdown">
               <a class="navbar-item" href="https://www.lightbend.com/about-lightbend">Who Is Lightbend?</a>
               <a class="navbar-item" href="https://www.lightbend.com/customers">Who Uses Lightbend?</a>
-              <a class="navbar-item" href="https://www.lightbend.com/lightbend-platform-subscription">Why Get A Subscription?</a>
+              <a class="navbar-item" href="https://www.lightbend.com/lightbend-subscription">Why Get A Subscription?</a>
               <a class="navbar-item" href="https://www.lightbend.com/company/news">News & Press</a>
-              <a class="navbar-item" href="https://shop.lightbend.com/">Online Swag Shop</a>
+              <!--<a class="navbar-item" href="https://shop.lightbend.com/">Online Swag Shop</a>-->
               <a class="navbar-item" href="https://www.lightbend.com/contact">Get In Contact</a>
           </div>
         </div>
