--- a/src/layouts/404.hbs
+++ b/src/layouts/404.hbs
@@ -9,7 +9,7 @@
 {{> head-scripts}}
   </head>
   <body class="status-404">
-{{> header}}
+{{> header theme="lightbend" url="https://developer.lightbend.com/docs/"}}
 {{> main}}
 {{> footer}}
   </body>
