--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -1,54 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{{detag (or page.title 'Untitled')}}}{{#if site.title}} :: {{site.title}}{{/if}}</title>
-
-	<meta itemprop="name" content="{{{detag (or page.title 'Untitled')}}}{{#if site.title}} | {{site.title}}{{/if}}">
-	<meta name="twitter:title" content="{{{detag (or page.title 'Untitled')}}}{{#if site.title}} | {{site.title}}{{/if}}">
-	<meta property="og:title" content="{{{detag (or page.title 'Untitled')}}}{{#if site.title}} | {{site.title}}{{/if}}" />
-
-	<meta property="og:site_name" content="Lightbend Documentation" />
-	<meta property="og:type" content="website" />
-	<meta name="author" content="Lightbend Documentation">
-
-	{{#if (or antoraVersion site.antoraVersion)}}
-	<meta name="generator" content="Antora {{or antoraVersion site.antoraVersion}}">
-	{{/if}}
-
-	{{#if (or page.canonicalUrl page.attributes.canonicalUrl)}}
-	<link rel="canonical" href="{{or page.canonicalUrl page.attributes.canonicalUrl}}">
-	<meta property="og:url" content="{{or page.canonicalUrl page.attributes.canonicalUrl}}" />
-	{{/if}}
-
-	{{#if page.attributes.robots}}
-	<meta name="robots" content="{{page.attributes.robots}}">
-	{{/if}}
-
-	{{#if page.keywords}}
-	<meta name="keywords" content="{{page.keywords}}">
-	{{/if}}
-
-	{{#if (or page.description page.attributes.description)}}
-	<meta name="description" content="{{or page.description page.attributes.description}}">
-	<meta itemprop="description" content="{{or page.description page.attributes.description}}">
-	<meta name="twitter:description" content="{{or page.description page.attributes.description}}">
-	<meta property="og:description" content="{{or page.description page.attributes.description}}" />
-	{{/if}}
-
-	<meta itemprop="image" content="{{or page.attributes.social-share-image "https://downloads.lightbend.com/website/social/lightbend-logo-orange-twitter.jpg"}}">
-	<meta name="twitter:image:src" content="{{or page.attributes.social-share-image "https://downloads.lightbend.com/website/social/lightbend-logo-orange-twitter.jpg"}}">
-	<meta property="og:image" content="{{or page.attributes.social-share-image "https://downloads.lightbend.com/website/social/lightbend-logo-orange-twitter.jpg"}}" />
-	<meta property="og:image:secure_url" content="{{or page.attributes.social-share-image "https://downloads.lightbend.com/website/social/lightbend-logo-orange-twitter.jpg"}}" />
-
-	<link rel="stylesheet" href="{{uiRootPath}}/css/site.css?v-01">
-	<link rel="shortcut icon" href="{{uiRootPath}}/img/favicons/favicon.ico" />
-
+{{> head}}
 {{> head-scripts}}
   </head>
   <body class="article {{page.attributes.type}}">
-{{> header}}
+{{> header theme="lightbend" url="https://developer.lightbend.com/docs/"}}
 {{> main}}
 {{> footer}}
   </body>
