--- a/src/layouts/default-lightbend-cloudstate.hbs
+++ b/src/layouts/default-lightbend-cloudstate.hbs
@@ -5,7 +5,7 @@
 {{> head-scripts}}
   </head>
   <body class="article {{page.attributes.type}} lightbend-cloudstate">
-{{> header theme="lightbend-cloudstate" url="https://developer.lightbend.com/docs/"}}
+{{> header theme="lightbend-cloudstate" url="https://www.lightbend.com/cloudstate-by-lightbend" site-id-url="https://developer.lightbend.com/docs/"}}
 {{> main}}
 {{> footer}}
   </body>
