--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -5,7 +5,7 @@
 {{> head-scripts}}
   </head>
   <body class="article {{page.attributes.type}}">
-{{> header theme="lightbend" url="https://developer.lightbend.com/docs/"}}
+{{> header theme="lightbend" url="https://developer.lightbend.com/docs/" site-id-url="https://developer.lightbend.com/docs/"}}
 {{> main}}
 {{> footer}}
   </body>
