--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -4,7 +4,7 @@
       <a class="navbar-item" href="{{url}}">
         <img class="header-logo" src="{{uiRootPath}}/img/{{theme}}/{{theme}}-reverse.svg">
       </a>
-      <a href="{{url}}" id="site-id" class="site-id">Documentation</a>
+      <a href="{{site-id-url}}" id="site-id" class="site-id">Documentation</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
