--- a/src/partials/article.hbs
+++ b/src/partials/article.hbs
@@ -88,11 +88,11 @@
 				</span>
 			{{/if}}
 			
-			{{#if page.attributes.supergroup-web-cli}}
+			{{#if page.attributes.supergroup-browser-cli}}
 				<span>
-					<label>{{page.attributes.supergroup-web-cli}}</label>
-					<select class="supergroup" name="supergroup-web-cli">
-						<option class="group" value="group-web">Web</option>
+					<label>{{page.attributes.supergroup-browser-cli}}</label>
+					<select class="supergroup" name="supergroup-browser-cli">
+						<option class="group" value="group-browser">Browser</option>
 						<option class="group" value="group-cli">CLI</option>
 					</select>
 				</span>
