--- a/src/layouts/default-lightbend-cloudstate.hbs
+++ b/src/layouts/default-lightbend-cloudstate.hbs
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
 {{> head}}
-{{> head-scripts}}
+{{> head-scripts-lightbend-cloudstate}}
   </head>
   <body class="article {{page.attributes.type}} lightbend-cloudstate">
 {{> cs-header theme="lightbend-cloudstate" url="https://www.lightbend.com/cloudstate-by-lightbend" site-id-url="https://developer.lightbend.com/docs/"}}
 {{> main}}
-{{> footer}}
+{{> footer-content}}
+{{> footer-scripts-global}}
+{{> footer-scripts-lightbend-cloudstate}}
   </body>
 </html>
