--- a/src/layouts/docs-only.hbs
+++ b/src/layouts/docs-only.hbs
@@ -8,6 +8,7 @@
   <body class="article docs-only">
 
 {{> docs-only}}
-{{> footer-scripts}}
+{{> footer-scripts-global}}
+{{> footer-scripts-lightbend}}
   </body>
 </html>
