--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -5,6 +5,7 @@
         <img class="header-logo" src="{{uiRootPath}}/img/{{theme}}/{{theme}}-reverse.svg">
       </a>
       <a href="{{site-id-url}}" id="site-id" class="site-id">Documentation</a>
+      <p>{{page.layout}}</p>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
