--- a/src/css/flex-video.css
+++ b/src/css/flex-video.css
@@ -1,9 +1,10 @@
 .flex-video-wrapper {
 	max-width: 800px;
+	display: block
 }
 .flex-video {
 	text-align: center;
-	background: var(--color-cloudflow-blue);
+	background: var(--color-lb-off-white);
 	position: relative;
 	padding-top: 1.5625rem;
 	padding-bottom: 57.25%;
@@ -41,27 +42,35 @@
 	line-height: 2;
 }
 .flex-video .cookie-warning > a {
-	color: var(--color-cloudflow-blue);
-	background: rgba(255,255,255,1);
+	color: var(--color-lb-orange);
 	display: inline-block;
-	padding: .5rem 1rem .25rem 1rem;
-	border-radius: 250px;
+	padding: .5rem;
 	margin: 1rem;
 	cursor: pointer;
+	margin-bottom: .5rem;
 	text-transform: uppercase;
-	font-size: 1rem;
-	font-weight: 700;
+	font-size: .689rem;
+	font-weight: 600;
+	border: 1px solid var(--color-lb-orange);
+	background: white;
+	transition: all 300ms ease-in-out
+
 }
 .flex-video .cookie-warning > a:hover {
 	text-decoration: none;
-	background: rgba(255,255,255,.8);
+	background: var(--color-lb-orange);
+	color: white;
+	transition: all 300ms ease-in-out
 }
 				
 .flex-video .cookie-warning span {
-	color: white;
-	font-size: 1rem;
+	color: var(--color-lb-slate);;
+	font-size: .689rem;
 }
 .flex-video .cookie-warning span a {
-	color: white;
+	color: var(--color-lb-orange);
 	text-decoration: underline;
+}
+.yt-widget-hide {
+	display: none;
 }
