--- a/src/partials/head-scripts-lightbend.hbs
+++ b/src/partials/head-scripts-lightbend.hbs
@@ -1,2 +1,6 @@
 <!--Head Scripts Lightbend-->
-<script src="https://cdn.cookielaw.org/consent/ae5fff26-6829-4430-a8ae-e7efb10d58bf.js" type="text/javascript" charset="UTF-8"></script>
+<script src="https://optanon.blob.core.windows.net/consent/ae5fff26-6829-4430-a8ae-e7efb10d58bf-test.js" type="text/javascript" charset="UTF-8"></script>
+
+<script type="text/javascript">
+	function OptanonWrapper() { }
+</script>
