--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,6 +16,10 @@
   --color-lb-light-grey: #c5d0d4;
   --color-lb-light-grey-dkr: #9eb1b7;
   --color-lb-light-grey-ltr: #f3f6f6;
+  --color-lb-blue: #15a9ce;
+  --color-lb-blue-dkr: #107f9b;
+  --color-lb-dark-blue: #0b5567;
+
 }
 
 html,
