--- a/src/layouts/cookie-lightbend-cloudstate.hbs
+++ b/src/layouts/cookie-lightbend-cloudstate.hbs
@@ -6,9 +6,9 @@
 {{> head-scripts-lightbend-cloudstate}}
 {{> head-scripts-youtube-embed}}
   </head>
-  <body class="article {{page.attributes.type}} lightbend-cloudstate">
+  <body class="{{page.attributes.type}} lightbend-cloudstate">
 {{> cs-header theme="lightbend-cloudstate" url="https://www.lightbend.com/cloudstate-by-lightbend" site-id-url="https://developer.lightbend.com/docs/"}}
-{{> main}}
+{{> cookie}}
 <footer class="footer">
 	{{> footer-nav}}
 	{{> footer-legal-lightbend-cloudstate}}
