--- a/src/layouts/default-lightbend-cloudstate-private.hbs
+++ b/src/layouts/default-lightbend-cloudstate-private.hbs
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
 {{> head-global}}
-{{> head-lightbend-cloudstate}}
-{{> head-scripts-lightbend-cloudstate}}
-{{> head-scripts-youtube-embed}}
+    <meta name="robots" content="noindex nofollow">
+
   </head>
   <body class="article {{page.attributes.type}} lightbend-cloudstate">
 {{> cs-header theme="lightbend-cloudstate" url="https://www.lightbend.com/cloudstate-by-lightbend" site-id-url="https://developer.lightbend.com/docs/"}}
@@ -14,6 +13,6 @@
 	{{> footer-legal-lightbend-cloudstate}}
 </footer>
 {{> footer-scripts-global}}
-{{> footer-scripts-lightbend-cloudstate}}
+{{> footer-scripts-youtube-embed-private}}
   </body>
 </html>
