--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-{{> head}}
+{{> head-global}}
+{{> head-lightbend}}
 {{> head-scripts-lightbend}}
+{{> head-scripts-youtube-embed}}
   </head>
   <body class="article {{page.attributes.type}}">
 {{> header theme="lightbend" url="https://developer.lightbend.com/docs/" site-id-url="https://developer.lightbend.com/docs/"}}
 {{> main}}
-{{> footer-content}}
+<footer class="footer">
+	{{> footer-nav}}
+	{{> footer-legal-lightbend}}
+</footer>
 {{> footer-scripts-global}}
 {{> footer-scripts-lightbend}}
   </body>
