--- a/src/layouts/default-lightbend-cloudstate.hbs
+++ b/src/layouts/default-lightbend-cloudstate.hbs
@@ -7,7 +7,7 @@
 {{> head-scripts-youtube-embed}}
   </head>
   <body class="article {{page.attributes.type}} lightbend-cloudstate">
-{{> cs-header theme="lightbend-cloudstate" url="https://www.lightbend.com/cloudstate-by-lightbend" site-id-url="https://developer.lightbend.com/docs/"}}
+{{> header-lightbend-cloudstate theme="lightbend-cloudstate" url="https://www.lightbend.com/cloudstate-by-lightbend" site-id-url="https://developer.lightbend.com/docs/"}}
 {{> main}}
 <footer class="footer">
 	{{> footer-nav}}
