--- a/src/partials/head-scripts-lightbend-cloudstate.hbs
+++ b/src/partials/head-scripts-lightbend-cloudstate.hbs
@@ -1,2 +1,2 @@
 <!--Head Scripts Lightbend Cloudstate-->
-<script src="https://optanon.blob.core.windows.net/consent/5315597d-10f5-4faa-a8d0-66d98af23365-test.js" type="text/javascript" charset="UTF-8"></script>
+<script src="https://cdn.cookielaw.org/consent/5315597d-10f5-4faa-a8d0-66d98af23365.js" type="text/javascript" charset="UTF-8"></script>
