--- a/src/partials/head-scripts-lightbend-cloudstate.hbs
+++ b/src/partials/head-scripts-lightbend-cloudstate.hbs
@@ -1,2 +1,13 @@
 <!--Head Scripts Lightbend Cloudstate-->
-<script src="https://cdn.cookielaw.org/consent/5315597d-10f5-4faa-a8d0-66d98af23365.js" type="text/javascript" charset="UTF-8"></script>
+<script>
+  var head = document.getElementsByTagName('head')[0];
+  if (!window.location.href.startsWith("file://")) {
+    var script = document.createElement('script');
+
+    script.type = 'text/javascript';
+    script.src = "https://cdn.cookielaw.org/consent/5315597d-10f5-4faa-a8d0-66d98af23365.js";
+    script.charset = "UTF-8";
+
+    head.appendChild(script);
+  }
+</script>
