--- a/src/partials/head-scripts-lightbend.hbs
+++ b/src/partials/head-scripts-lightbend.hbs
@@ -1,2 +1,13 @@
 <!--Head Scripts Lightbend-->
-<script src="https://cdn.cookielaw.org/consent/ae5fff26-6829-4430-a8ae-e7efb10d58bf.js" type="text/javascript" charset="UTF-8"></script>
+<script>
+  var head = document.getElementsByTagName('head')[0];
+  if (!window.location.href.startsWith("file://")) {
+    var script = document.createElement('script');
+
+    script.type = 'text/javascript';
+    script.src = "https://cdn.cookielaw.org/consent/ae5fff26-6829-4430-a8ae-e7efb10d58bf.js";
+    script.charset = "UTF-8";
+
+    head.appendChild(script);
+  }
+</script>
