--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,7 @@
 :root {
   --color-text: #1c3b47;
-  --color-navbar-bg: #128aaa;
-  --color-navbar-bg-focus: #128aaa;
+  --color-navbar-bg: #15a9ce;
+  --color-navbar-bg-focus: #15a9ce;
   --color-navbar-text: #ffffff;
   --color-lb-orange: #ff931e;
   --color-lb-orange-dkr: #f48122;
